[package]
name = "asdev"
version = "0.1.4-alpha.0"
authors = ["vladikoff"]
edition = "2018"
license = "MPL-2.0"
homepage = "https://github.com/vladikoff/a-s-dev"
repository = "https://github.com/vladikoff/a-s-dev"
description = "a-s-dev"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.5.0"
clap = "2.33"

[[bin]]
name = "cargo-asdev"
path = "src/main.rs"
